# mmck-chicken-docs

./: .gitignore  .travis.yml  COPYING  Makefile.am  NEWS  README  README.md  TODO.org  configure.ac
src/: chicken-core.texi  chicken-internals.texi  macros.texi  r5rs.texi  srfi-16-case-lambda.texi  srfi-23-error-reporting.texi  srfi-45-lazy-evaluation.texi  version.texi
tests/: test-chicken-core-base.scm  test-chicken-core-condition.scm  test-chicken-internals-checks.scm  test-chicken-internals-procs.scm  test-chicken-internals-slots.scm  test-chicken-internals-structs.scm  test-slots.scm  test-version.scm
